[project]
name = "rbo-analytics"
version = "0.1.0"
description = "Implements Rank Biased Overlap (RBO) statistics for similarity between recommender systems."
readme = "README.md"
authors = [
    { name = "Rod Gomez", email = "armyofthepenguin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
